Styling - Form no longer causes the entire page to jump when toggling visibility

--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,6 @@ h1 {
     margin: 0;
 }
 
-@media only screen and (min-width: 601px) {
-    h1 {
-        font-size: 80px;
-    }
-}
 main {
     padding: 0px;
     max-width: 1000px;
@@ -129,7 +124,8 @@ a:hover {
     height: fit-content;
     display: flex;
     justify-content: space-around;
-    margin-top: 10px;
+    margin: 5px;
+    margin-bottom: 133px;
     padding: 5px;
     border-radius: 30px;
     list-style-type: none;
@@ -148,6 +144,11 @@ button {
     font-size: 1em;
     cursor: pointer;
 }
+.row {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
 input[type="text"] {
     border: 1px solid black;
     display: block;
@@ -158,6 +159,7 @@ input[type="text"] {
 }
 #form {
     background-color: white;
+    display: none;
     width: fit-content;
     border-radius: 21px;
     margin-top: 10px;
